read more button

--- a/empowermart/home/templates/home.html
+++ b/empowermart/home/templates/home.html
@@ -95,7 +95,7 @@
             </p>
         </div>
         <div class="read-more">
-          <a href=href="{% url 'about' %}" class="btn main-btn">READ MORE</a>
+          <a href="{% url 'about' %}" class="btn main-btn">READ MORE</a>
         </div>
       </div>
     </div>
