--- a/empowermart/templates/about.html
+++ b/empowermart/templates/about.html
@@ -19,7 +19,7 @@
         <div class="header">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo1.png" alt="Logo" class="logo">
+                    <img src="{% static 'images/logo1.png' %}" alt="Logo" class='logo'>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-stream navbar-toggler-icon"></i>
