--- a/empowermart/static/css/style.css
+++ b/empowermart/static/css/style.css
@@ -345,7 +345,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to right, #3f046c, #9157b3);
+    background: linear-gradient(to right,#000000, #3f046c, #9157b3,rgb(215, 149, 254));
 }
 .login body {
    
@@ -368,17 +368,22 @@ section {
     background-color: white;
     padding: 20px;
     border-radius: 18px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    box-sizing: border-box;
+    justify-content: flex-start;
+    
 }
 
 .login .form-header {
-    font-size: 3.5rem;
+    font-size: 3.9rem;
     color: #3f046c;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
+    margin-top:45px;
+   
 }
 
 .login .user-form {
@@ -386,25 +391,23 @@ section {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 15px;
 }
 
-.login .user-form input {
-    width: 90%;
-    margin: 10px 0;
-    padding: 10px;
-    font-size: 2.1rem;
+.login input {
+   width:90%;
+    margin: 10px;
+    padding: 7px 15px;
+    font-size: 2.8rem;
     border: 2px solid #5a189a;
     border-radius: 5px;
     outline: none;
     transition: border-color 0.3s;
 }
 
-.login .user-form input:focus {
-    border-color: #9d4edd;
-}
 
 .login .login-button {
-    position: relative;
+    position:relative;
     color: var(--bg-white);
     background: linear-gradient(to right, #3f046c, #9157b3);
     z-index: 1;
@@ -414,9 +417,12 @@ section {
     text-transform: uppercase;
     padding: 1rem 3.5rem;
     font-weight: 600;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     margin-top: 1.5rem;
     letter-spacing: 0.2rem;
+    text-align: center;
+    display: block;
+    margin: 20px auto; /* Center the button */
 }
 
 .login .login-button:hover {
