--- a/empowermart/templates/dashboard.html
+++ b/empowermart/templates/dashboard.html
@@ -47,7 +47,7 @@
                             <img src="{{ product.Product_Image.url }}" class="card-img-top" alt="Product Image">
                             <div class="card-body">
                                 <h5 class="card-title">{{ product.Product_name }}</h5>
-                                <p class="card-text">Price: ₹{{ product.price_per_unit }}</p>
+                                <p class="card-text">Price: ₹{{ product.Price_per_unit }}</p>
                                 <p class="card-text">Business: {{ product.business_name }}</p>
                             </div>
                         </div>
