mainly url redirection

--- a/empowermart/templates/home.html
+++ b/empowermart/templates/home.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{% url 'about' %}">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'product' %}">Products</a>
+                      <a class="nav-link" href="{% url 'product_list' %}">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'startup' %}">College Startups</a>
@@ -64,7 +64,7 @@
                     <h1>IGDTUW Marketplace</h1>
                     <h3>Discover, Connect, and Support Student Businesses</h3>
                     <p>Join us in celebrating student creativity and entrepreneurship by exploring a variety of unique products on our platform.</p>
-                    <a href="{% url 'product' %}" class="btn main-btn">ALL PRODUCTS</a>
+                    <a href="{% url 'product_list' %}" class="btn main-btn">ALL PRODUCTS</a>
                   </div>
                 </div>
               </div>
@@ -75,7 +75,7 @@
                     <h1>IGDTUW Marketplace</h1>
                     <h3>Discover, Connect, and Support Student Businesses</h3>
                     <p>Join us in celebrating student creativity and entrepreneurship by exploring a variety of unique products on our platform.</p>
-                    <a href="{% url 'product' %}" class="btn main-btn">ALL PRODUCTS</a>
+                    <a href="{% url 'product_list' %}" class="btn main-btn">ALL PRODUCTS</a>
                   </div>
                 </div>
               </div>
