--- a/empowermart/templates/about.html
+++ b/empowermart/templates/about.html
@@ -33,7 +33,7 @@
                             <a class="nav-link active" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'product' %}">Products</a>
+                            <a class="nav-link" href="{% url 'product_list' %}">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'startup' %}">College Startups</a>
