--- a/empowermart/templates/internship.html
+++ b/empowermart/templates/internship.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="{% url 'about' %}">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'product' %}">Products</a>
+                            <a class="nav-link" href="{% url 'product_list' %}">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'startup' %}">College Startups</a>
