--- a/empowermart/templates/startup.html
+++ b/empowermart/templates/startup.html
@@ -109,7 +109,7 @@
                           <a class="nav-link" href="{% url 'about' %}">About Us</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="{% url 'product' %}">Products</a>
+                          <a class="nav-link" href="{% url 'product_list' %}">Products</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link active" href="{% url 'startup' %}">College Startups</a>
