--- a/empowermart/templates/product_detail.html
+++ b/empowermart/templates/product_detail.html
@@ -125,9 +125,9 @@ a:hover {
         <a href="{{ user.Instagram_link }}" target="_blank" class="instagram-link">
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="tel:{{ user.contact_number }}" class="phone-link">
+        <a href="tel:{{ user.Phone_number }}" class="phone-link">
           <i class="fa fa-phone-alt"></i> {{ user.Phone_number }}
-        </a>
+        </a>                
       </div>
     
       
