--- a/empowermart/templates/edit_product.html
+++ b/empowermart/templates/edit_product.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Product</title>
+    {% load static %}
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon" />
 
     <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}"> 
 </head>
 <body>
-    <form method="POST" action="{% url 'update_product' product.id %}" enctype="multipart/form-data">
+    <form method="POST" action="{% url 'update_product' product.Product_Id %}" enctype="multipart/form-data">
         {% csrf_token %}
         <h2>Edit Product</h2>
         <!-- Product Name -->
