--- a/empowermart/templates/dashboard.html
+++ b/empowermart/templates/dashboard.html
@@ -124,9 +124,9 @@
                                         <i class="fas fa-edit"> Edit</i>
                                     </a>   
                                     
-                                    <button type="submit" class="btn delete-btn" onclick="return confirm('Are you sure you want to delete this product?');">
-                                        <i class="fa fa-trash"> Delete</i> 
-                                    </button>
+                                    <a href="{% url 'delete_product' product.Product_Id %}" class="btn delete-btn" onclick="return confirm('Are you sure you want to delete this product?');">
+                                        <i class="fa fa-trash"> Delete</i>
+                                    </a>                                    
                                 </div>                                                        
                             </div>
                         </div>
