--- a/empowermart/templates/dashboard.html
+++ b/empowermart/templates/dashboard.html
@@ -178,10 +178,10 @@
                             <p class="card-text">Business: {{ product.business_name }}</p>
                             <div class="product-actions">
                                 <a href="{% url 'update_product' product.Product_Id %}" class="edit-button">
-                                    <i class="fas fa-edit"> Edit</i>
+                                    <i class="fas fa-edit"> </i>
                                 </a>   
                                 <a href="{% url 'delete_product' product.Product_Id %}" class="btn delete-btn" onclick="return confirm('Are you sure you want to delete this product?');">
-                                    <i class="fa fa-trash"> Delete</i>
+                                    <i class="fa fa-trash"> </i>
                                 </a>
                             </div>
                         </div>
