--- a/empowermart/templates/about.html
+++ b/empowermart/templates/about.html
@@ -19,12 +19,14 @@
         <div class="header">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                    <img src="{% static 'images/logo1.png' %}" alt="Logo" class='logo'>
+                  <img src="{% static 'images/logo1.png' %}" alt="Logo" class="logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-stream navbar-toggler-icon"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div id="menu-icon" class="menu-icon d-lg-none">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="collapse navbar-collapse d-lg-flex" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
@@ -33,7 +35,7 @@
                             <a class="nav-link active" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'product_list' %}">Products</a>
+                          <a class="nav-link" href="{% url 'product_list' %}">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'startup' %}">College Startups</a>
@@ -52,8 +54,21 @@
                     </ul>
                 </div>
             </nav>
+            <div class="side-menu" id="side-menu">
+              <span id="close-menu" class="close-menu">&#10005;</span> <!-- Close icon -->
+              <ul>
+                  <li><a href="{% url 'home' %}">Home</a></li>
+                  <li><a href="{% url 'about' %}">About Us</a></li>
+                  <li><a href="{% url 'product_list' %}">Products</a></li>
+                  <li><a href="{% url 'startup' %}">College Startups</a></li>
+                  <li><a href="{% url 'internship' %}">Internship Opportunities</a></li>
+                  <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSemODBRhASNpFRlV64wCOltSxSLDR_WBGUQKw6XmJerUi9uJQ/viewform?usp=sf_link">Contact Us</a></li>
+                  <li><a href="{% url 'login' %}">Login</a></li>
+              </ul>
+          </div>
+          
         </div>
-    </header>
+      </header>
     <section class="banner_section">
         <div class="container">
             <div class="banner-content">
@@ -90,8 +105,59 @@
             </div>
         </div>
     </section>
+    <script>const menuIcon = document.getElementById('menu-icon');
+        const sideMenu = document.getElementById('side-menu');
+        const closeMenu = document.getElementById('close-menu');
+        const menuSpans = menuIcon.querySelectorAll('span');
+        
+        menuIcon.addEventListener('click', () => {
+            sideMenu.classList.toggle('open');
+            const isOpen = sideMenu.classList.contains('open');
+        
+            // Toggle menu icon visibility
+            menuIcon.style.display = isOpen ? 'none' : 'block';
+        
+            // Change span color (if needed, can be skipped when hiding icon)
+            menuSpans.forEach(span => {
+                span.style.backgroundColor = isOpen ? 'white' : '#e0aaff';
+            });
+        });
+        
+        // Close the menu when clicking the close icon
+        closeMenu.addEventListener('click', () => {
+            sideMenu.classList.remove('open');
+            menuIcon.style.display = 'block';
+            menuSpans.forEach(span => {
+                span.style.backgroundColor = '#e0aaff';
+            });
+        });
+        
+        // Close the menu when clicking outside of the menu
+        document.addEventListener('click', (event) => {
+            if (!sideMenu.contains(event.target) && !menuIcon.contains(event.target)) {
+                sideMenu.classList.remove('open');
+                menuIcon.style.display = 'block';
+                menuSpans.forEach(span => {
+                    span.style.backgroundColor = '#e0aaff';
+                });
+            }
+        });
+        
+        // Close the menu when scrolling
+        window.addEventListener('scroll', () => {
+            if (sideMenu.classList.contains('open')) {
+                sideMenu.classList.remove('open');
+                menuIcon.style.display = 'block';
+                menuSpans.forEach(span => {
+                    span.style.backgroundColor = '#e0aaff';
+                });
+            }
+        });
+        
+        
+      </script>
    
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
    
