reset password functionality

--- a/empowermart/templates/dashboard.html
+++ b/empowermart/templates/dashboard.html
@@ -144,7 +144,7 @@
                 <nav class="side-menu" id="side-menu">
                     <ul>
                         <li><a href="{% url 'logout' %}">Log Out</a></li>
-                        <li><a href="reset_password.html">Reset Password</a></li>
+                        <li><a href="{% url 'reset_password' %}">Reset Password</a></li>
                         
                     </ul>
                 </nav>
