--- a/empowermart/templates/dashboard/reset_password.html
+++ b/empowermart/templates/dashboard/reset_password.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
     <title>Add Product</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
@@ -120,6 +121,18 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script>
+        // Client-side validation to check if passwords match
+        document.querySelector("form").addEventListener("submit", function(event) {
+            var newPassword = document.getElementById("new-password").value;
+            var confirmPassword = document.getElementById("confirm-password").value;
+            
+            if (newPassword !== confirmPassword) {
+                alert("Passwords do not match. Please try again.");
+                event.preventDefault();  // Prevent form submission
+            }
+        });
+    </script>     
 </body>
 </html>
